--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,326 +1,36 @@
-body {
-    background: #f8f8f8;
-    color: black;
-    margin: 0;
-}
 
-.container {
-    width: 1000px;
+body {
+    background-color: #f8f8f8;
     margin: 0 auto;
 }
 
-a {
-    text-decoration: none;
-    color: black;
-}
-
 header {
-    position:fixed;
-    top:0;
-    background-color: #eaeaea;
-    height: 40px;
-    padding: 20px 0 20px 0;
-    border-bottom: 2px solid #CB1242;
+    background-color: #abeafa;
+    height: 700px;
 }
 
-header nav {
-    display: inline-block;
-    width: 1000px;
-}
-
-header img {
-    float: left;
-    margin-left: 20px;
-    height: 40px;
-}
-
-header nav ul {
-    display: inline-block;
-    float: right;
-    margin: 0 15px 0 0;
-}
-
-header nav ul li {
-    background: white;
-    list-style: none;
-    display: inline-block;
-    margin-right: 5px;
-    height: 40px;
-    width: 120px;
-    border: 1px solid #CB1242;
-    box-shadow: 4px 4px 8px -3px #A5A5A5;
-}
-
-header nav ul li a {
-    display: block;
+.headerInside {
     position: relative;
-    line-height: 40px;
-    text-align: center;
-    font-variant: small-caps;
-    font-size: 1.3em;
+    width: 1170px;
+    height: inherit;
+    margin: 0 auto;
 }
 
-#selected {
-    border: 2px solid #CB1242;
-}
-
-header nav ul li:active {
-    box-shadow: none;
-}
-
-header nav ul li a:active {
-    font-size: 1.27em;
-}
-
-header nav ul li a:hover {
-    color: #CB1242;
-}
-
-section {
-    margin-top: 100px;
-}
-
-h1, h2, h3 {
-    font-weight: 400;
-    font-variant: small-caps;
-    padding-left: 25px;
-    text-align: center;
-}
-
-h1 {
-    font-size: 2em;
-    line-height: 40px;
-    margin-bottom: 20px;
-}
-
-h2 {
-    font-size: 1.6em;
-}
-
-h3 {
-    font-size: 1.4em;
-    text-align: left;
-}
-
-.products h3 {
-    font-size: 18px;
-    background-color: #eaeaea;
-}
-
-p {
-    text-align: justify;
-}
-
-section p:first-letter {
-    color: #CB1242;
-    font-size: 1.2em;
-    padding-left: 25px;
-}
-
-.block {
+.logo {
+    position: absolute;
     display: block;
-    width: 1000px;
-    text-align: center;
+    width: 125px;
+    height: 111px;
+    margin-left: 69px;
+    margin-top: 24px;
 }
 
-.storegrid img {
-    width: 200px;
-    height: 260px;
+.content {
+
 }
 
-.storegrid {
-    width: 20%;
-    float: left;
-    margin-right: 5%;
-    outline: 1px solid #CB1242;
-    box-shadow: 4px 4px 8px -3px #A5A5A5;
-    text-align: center;
-}
-
-.storegrid:active {
-    box-shadow: none;
-}
-
-.storegrid:nth-child(n) {
-    margin: 15px 25px 15px 25px;
-}
-
-.storegrid:nth-child(-n+4) {
-    margin-top: 0;
-}
-
-.storegrid:nth-last-child(1) {
-    margin-bottom: 110px;
-}
-
-#shortdesc {
-    color:  #707070;
-    font-size: 18px;
-    font-style: italic;
-    line-height: 16px;
-}
-
-.products .block #shortdesc {
-    float: left;
-    width: 70%;
-    line-height: 24px;
-    margin-top: 0;
-}
-
-#longdesc {
-    color: #484343;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: left;
-}
-
-.products .content ul {
-    list-style:none;
-    color:  #484343;
-    font-size: 18px;
-    line-height: 28px;
-}
-
-.products .content li:before {
-    content: "🕮";
-    margin-right: 1em;
-    color: #CB1242;
-}
-
-.products .content img {
-    width: 200px;
-    height: 300px;
-    border: 1px solid #CB1242;
-    box-shadow: 4px 4px 8px -3px #A5A5A5;
-}
-
-.products .content a:hover img{
-    border: 1px solid transparent;
-}
-
-.products .content a:active img{
-    box-shadow: none;
-}
-
-.products .content a {
-    float: right;
-    width: 20%;
-    margin: 0 20px 20px 20px;
-}
-
-.contact form {
-    float: right;
-    width: 700px;
-    margin: 0 20px 20px 0;
-}
-
-.contact fieldset legend {
-    font-size: 1.4em;
-    font-weight: 400;
-    font-variant: small-caps;
-    line-height: 30px;
-}
-
-.contact fieldset {
-    padding: 10px;
-    line-height: 40px;
-    border: 1px solid #CB1242;
-    box-shadow: 4px 4px 8px -3px #A5A5A5;
-}
-
-.contact fieldset label {
-    color: #484343;
-    font-size: 16px;
-    font-weight: 400;
-}
-
-.contact fieldset input,select,textarea {
-    background-color: #fcfcfc;
-    float: right;
-    width: 500px;
-    height: 30px;
-    border: 1px solid #484343;
-    box-shadow: 4px 4px 8px -3px #A5A5A5 inset;
-    padding-left: 10px;
-    padding-top: 4px;
-    font-size: 15px;
-    font-weight: 400;
-}
-
-.contact fieldset #name {
-    text-transform: capitalize;
-}
-
-.contact fieldset input:focus,select:focus,textarea:focus {
-    background: white;
-    color: #05607E;
-    box-shadow: 4px 4px 8px -3px #cecece inset;
-}
-
-.contact fieldset select {
-    height: 38px;
-    width: 512px;
-}
-
-.contact fieldset textarea {
-    width: 550px;
-    height: 120px;
-    resize: none;
-    float: left;
-    padding-bottom: 5px;
-}
-
-button {
-    background-color: #f8f8f8;
-    float: right;
-    height: 30px;
-    width: 100px;
-    margin-top: 100px;
-    line-height: 20px;
-    text-align: center;
-    border: 1px solid #CB1242;
-    box-shadow: 4px 4px 8px -3px #A5A5A5;
-    cursor: pointer;
-}
-
-.products button {
-    float: left;
-    height: 40px;
-    width: 120px;
-    margin: 0 0 0 20px;
-    font-variant: small-caps;
-    font-size: 1.3em;
-}
-
-button:active {
-    box-shadow: none;
-}
-
-button:focus {
-    outline: none;
-}
-
-#map {
-    display: block;
-    margin-bottom: 60px;
-}
-
-.stub {
-    clear:both;
-}
-
-footer {
-    position:fixed;
-    bottom:0;
-    width: 1000px;
-    background-color: #eaeaea;
-    height: 60px;
-    border-top: 2px solid #CB1242;
-}
-
-footer p {
-    float: right;
-    margin-right: 20px;
-    margin-top: 20px;
+.contentInside {
+    width: 1170px;
+    height: inherit;
+    margin: 0 auto;
 }
