--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 
 body {
-    background-color: #f8f8f8;
+    background-color: #abeafa;
     margin: 0 auto;
 }
 
 header {
-    background-color: #abeafa;
+    background: url("../img/indexBack.jpg") no-repeat;
+    background-position: center center;
     height: 700px;
 }
 
@@ -21,16 +22,491 @@ header {
     display: block;
     width: 125px;
     height: 111px;
-    margin-left: 69px;
-    margin-top: 24px;
+    left: 69px;
+    top: 24px;
 }
 
-.content {
+.iconsWrap {
+    position: absolute;
+    right: 67px;
+    top: 50px;
+}
 
+.iconsWrap i {
+    padding-right: 13px;
+    color: white;
+    height: 16px;
+}
+
+.iconsWrap:hover {
+    cursor: pointer;
+}
+
+.welcome {
+    font-family: "Raleway", sans-serif;
+    position: absolute;
+    left: 0;
+    top: 336px;
+    width: 270px;
+    height: 300px;
+    background-color: #FFF51F;
+}
+
+.welcome h1 {
+    font-size: 30px;
+    color: #333333;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 30px;
+    text-align: left;
+    margin-left: 30px;
+    margin-top: 82px;
+}
+
+.welcome p {
+    font-size: 18px;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
+    text-align: left;
+    line-height: 0.778;
+    margin-left: 30px;
+}
+
+.slide {
+    font-family: "Raleway", sans-serif;
+    position: absolute;
+    left: 752px;
+    top: 240px;
+    width: 313px;
+}
+
+.slide h2 {
+    color: #FFF51F;
+    font-size: 48px;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 0.708;
+    margin: 0;
+}
+
+.slide p {
+    color: #FFF51F;
+    text-transform: none;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    margin: 6px 0 60px 0;
+}
+
+.slide button {
+    background-color: #FFF51F;
+    width: 125px;
+    height: 50px;
+    border: none;
+    font-family: "Raleway", sans-serif;
+    font-size: 14px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin-left: 5px;
+}
+
+.slide button:hover {
+    background-color: #333333;
+    color: #FFF51F;
+    cursor: pointer;
 }
 
 .contentInside {
+    position: relative;
     width: 1170px;
     height: inherit;
     margin: 0 auto;
+    margin-top: -20px;
+    z-index: 1;
+}
+.content .left {
+    float: left;
+    width: 270px;
+}
+
+.content nav ul {
+    margin: 0;
+    padding: 0;
+}
+
+.content nav li {
+    list-style-type: none;
+    padding-left: 40px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+    font-family: "Roboto Black", sans-serif;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.content nav>div{
+    background-color: #333333;
+    height: 20px;
+}
+
+.content nav .menu_name {
+    background-color: #333333;
+}
+
+.content nav .menu_item {
+    background-color: #26D2FC;
+    color: #333333;
+}
+
+.content nav .menu_item:hover{
+    background-color: #333333;
+    color: white;
+    cursor: pointer;
+}
+
+.nowIsOpen {
+    margin-top: 30px;
+    height: 300px;
+    border: 10px solid white;
+    box-sizing: border-box;
+}
+
+.nowIsOpenInside {
+    width: 100%;
+    height: 100%;
+    background: url(../img/store.jpg) no-repeat;
+}
+
+.nowIsOpen span {
+    font-family: "Raleway Black", sans-serif;
+    font-size: 36px;
+    font-style: italic;
+    text-transform: uppercase;
+    position: relative;
+    top: 129px;
+    left: 142px;
+    color: #333;
+}
+
+
+.content article {
+    float: right;
+    width: 870px;
+}
+
+.content article h2 {
+    display: block;
+    background-color: #f8f8f8;
+    color: #707070;
+    font-size: 22px;
+    font-family: "Roboto Black", sans-serif;
+    font-style: italic;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: left;
+    line-height: 1.2;
+    padding: 25px 0 25px 25px;
+    margin: 0 0 30px 0;
+}
+
+.content article ul {
+    margin: 0;
+    padding: 0;
+}
+
+.productCard {
+    display: block;
+    position: relative;
+    float: left;
+    background-color: #fff;
+    list-style-type: none;
+    width: 270px;
+    height: 320px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    color: #333333;
+    font-family: "Roboto Black", sans-serif;
+    font-style: italic;
+    font-weight: 900;
+    line-height: 1.2;
+}
+
+.productCard:hover {
+    cursor: pointer;
+    outline: 2px solid white;
+}
+
+.productCard:nth-child(3n) {
+    margin-right: 0;
+}
+
+.productCard img {
+    width: 250px;
+    height: 230px;
+    margin: 10px 10px 20px 10px;
+}
+
+.productName {
+    float: left;
+    width: 140px;
+    font-size: 14px;
+    text-align: left;
+    padding-left: 24px;
+    min-height: 40px;
+    max-height: 2.4em;
+    overflow: hidden;
+}
+.productPrice {
+    float: right;
+    width: 90px;
+    font-size: 18px;
+    text-align: center;
+    padding-right: 10px;
+}
+
+.productPriceOld {
+    float: right;
+    width: 90px;
+    text-align: center;
+    padding-right: 10px;
+    color: #e24602;
+    font-size: 14px;
+    text-decoration: line-through;
+}
+
+.new:before {
+    content: url("../img/new-corner.png");
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 46px;
+    height: 46px;
+    z-index: 1;
+}
+
+.hot:before {
+    content: url("../img/hot-corner.png");
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 46px;
+    height: 46px;
+    z-index: 1;
+}
+
+.clearfix {
+    clear: both;
+    height: 10px;
+}
+
+.brands {
+    background-color: #fff;
+    height: 160px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px;
+    box-sizing: border-box;
+}
+
+.istagramFeedWrap {
+    height: 350px;
+    background-color: #eaeaea;
+    padding-top: 50px;
+    box-sizing: border-box;
+}
+
+.instaFeedHead {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    font-family: "Roboto Black Italic", sans-serif;
+}
+
+.instaFeedHead i {
+    font-size: 32px;
+    font-weight: bold;
+    position: relative;
+    top: 5px;
+}
+
+.instaFeedHead span {
+    font-size: 22px;
+}
+
+.instaFeedImages {
+    margin-top: 29px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.instaFeedImages img {
+    border: 8px solid #fff;
+    box-sizing: border-box;
+}
+
+.socialButtonsWrap {
+    height: 150px;
+    display: flex;
+}
+
+.socialButtonsWrap a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100%/3);
+    height: inherit;
+    text-decoration: none;
+    color: #fff;
+    font-size: 4rem;
+}
+
+.socialButtonsWrap a:nth-child(1) {
+    background-color: #3b5997;
+}
+
+.socialButtonsWrap a:nth-child(2) {
+    background-color: #3fccfd;
+}
+
+.socialButtonsWrap a:nth-child(3) {
+    background-color: #cb2027;
+}
+
+footer {
+    background-color: #373737;
+    color: #fff;
+}
+
+.footerInside {
+    width: 1170px;
+    margin: 0 auto;
+    min-height: 343px;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 75px;
+    box-sizing: border-box;
+}
+
+.columnHead {
+    font-family: "Raleway Extra Bold", sans-serif;
+    font-size: 18px;
+    margin-bottom: 28px;
+}
+
+.columnLinks a {
+    font-family: "Roboto Regular", sans-serif;
+    font-size: 12px;
+    color: inherit;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.newsLetter {
+    width: 270px;
+}
+
+.columnNewsLetter {
+    font-family: "Roboto Regular", sans-serif;
+    font-size: 12px;
+}
+
+.newsLetterText {
+    margin-bottom: 31px;
+}
+
+.columnNewsLetter input {
+    background-color: #fff51f;
+    width: 180px;
+    height: 30px;
+    outline: none;
+    border: none;
+    padding: 0 5px;
+    box-sizing: border-box;
+    float: left;
+}
+
+.columnNewsLetter button {
+    width: 71px;
+    height: 30px;
+    background: #000;
+    color: #fff;
+    font-family: "Roboto Regular", sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    border: 0;
+    outline: none;
+}
+
+.columnNewsLetter button:hover {
+    background: #fff;
+    color: #000;
+    cursor: pointer;
+}
+
+.cardsWrap {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 45px;
+}
+
+.about {
+    width: 232px;
+    font-family: "Roboto Regular", sans-serif;
+}
+
+.aboutText {
+    font-size: 12px;
+    text-align: justify;
+}
+
+.aboutPhone {
+    font-size: 14px;
+    margin-top: 14px;
+}
+
+.aboutPhone span,
+.aboutEmail span {
+    margin-right: 10px;
+}
+
+.aboutEmail {
+    margin-top: 14px;
+    color: #faef03;
+    font-size: 14px;
+}
+
+.footerCopyrights {
+    height: 47px;
+    background: #333;
+    line-height: 47px;
+}
+
+.copyrightsInside {
+    width: 1170px;
+    margin: 0 auto;
+    height: inherit;
+}
+
+.footerCopySign {
+    float: left;
+    font-size: 12px;
+    font-family: "Roboto Regular", sans-serif;
+}
+
+.footerSocials {
+    height: inherit;
+    float:right;
+    width: 178px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footerSocials {
+    cursor: pointer;
 }
